fixed div white gap

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@ main {
 }
 
 .container {
-  margin-left: 25px;
+  padding-left: 25px;
+  display: block;
 }
 
 
@@ -78,6 +79,11 @@ header h3 {
 
 /**** CONTACT ****/
 
-#contact{
+#contact {
 background: #ffcf5c;
+padding-top: 1px;
 }
+
+/*#contact h3 {
+  padding-top: 10px;
+}*/
